force-app/main/default/objects/PushEDM_Domain__c/PushEDM_Domain__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SSSW - used to store site name and is used by shareInformation related functionality</description>
    <label>PushEDM Image Domain</label>
</CustomObject>