force-app/main/default/objects/PushEDM_Domain__c/fields/Force_Com_URL__c.field-meta.xml
<CustomField>
    <fullName>Force_Com_URL__c</fullName>
    <label>Force.Com URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>