force-app/main/default/objects/PushEDM_Domain__c/fields/Supported_Article_Types__c.field-meta.xml
<CustomField>
    <fullName>Supported_Article_Types__c</fullName>
    <label>Supported Article Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>